first commit since using atom with this project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 <DOCTYPE html>
+
+<html>
+
+<head>
+  <title>Michael's quiz</title>
+  <script src = "http://ajax.goodgleapis.com/ajax/libs/jquery.min.is"></script>
+  <script src = "myscript.js"></script>
+
+  <body>
+    <img src = "integral.png" alt "integral image">
+    <p> This is a math quiz.... have fun <br>
+        Have fun!
+    </p>
+  </body>
+</head>
+</html>
