--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <DOCTYPE html>
 
-<html>
+  <html>
 
-<head>
-  <title>Michael's quiz</title>
-  <script src = "http://ajax.goodgleapis.com/ajax/libs/jquery.min.is"></script>
-  <script src = "myscript.js"></script>
+  <head>
+    <title>Michael's quiz</title>
+    <script src="http://ajax.goodgleapis.com/ajax/libs/jquery.min.is"></script>
+    <script src="myscript.js"></script>
 
-  <body>
-    <img src = "integral.png" alt "integral image">
-    <p> This is a math quiz.... have fun <br>
-        Have fun!
-    </p>
-  </body>
-</head>
-</html>
+    <body>
+      <img src="sin.png" alt "sinImage">
+      <p> The derivative of sin(x) is ... <br>
+        <button type="button" id="Button" onclick="alert('Correct!')">cosx</button> <br>
+        <button type="button" id="Button" onclick="alert('Wrong')">sinx</button><br>
+        <button type="button" id="Button" onclick="alert('Wrong')">tanx</button>
+        <li>
+          <a href="file:///Users/MichaelMoschitto/Desktop/MathQuiz/index2.html">Second Question</a></li>
+      </p>
+    </body>
+  </head>
+
+  </html>
