trying to fix this

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
 
   <head>
     <title>Michael's quiz</title>
+    <link rel="stylesheet" type=t ext/css href="style.css">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js">
     <script src="http://ajax.goodgleapis.com/ajax/libs/jquery.min.is"></script>
     <script src="myscript.js"></script>
 
     <body>
-      <img src="sin.png" alt "sinImage">
-      <p> The derivative of sin(x) is ... <br>
-        <button type="button" id="Button" onclick="alert('Correct!')">cosx</button> <br>
-        <button type="button" id="Button" onclick="alert('Wrong')">sinx</button><br>
-        <button type="button" id="Button" onclick="alert('Wrong')">tanx</button>
-        <li>
-          <a href="file:///Users/MichaelMoschitto/Desktop/MathQuiz/index2.html">Second Question</a></li>
-      </p>
+      <center>
+        <h2>Welcome to Michael's derivative quiz</h2>
+        <img src="sin.png" alt = "sinImage" id = "img1">
+        <p> The derivative of sin(x) is ... <br>
+          <button type="button" id = "Button" onclick="alert('Correct!')">cosx</button> <br>
+          <button type="button" onclick="alert('Wrong')">sinx</button><br>
+          <button type="button" onclick="alert('Wrong')">tanx</button>
+          <li>
+            <a href="file:///Users/MichaelMoschitto/Desktop/MathQuiz/index2.html">Second Question</a></li>
+        </p>
+      </center>
     </body>
   </head>
 
