--- a/index2.html
+++ b/index2.html
@@ -4,18 +4,21 @@
 
   <head>
     <title>Michael's quiz</title>
-    <script src="http://ajax.goodgleapis.com/ajax/libs/jquery.min.is"></script>
+    <link rel="stylesheet" type=t ext/css href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="myscript.js"></script>
 
     <body>
-      <img src="secx.png" alt "secImage">
-      <p> The derivative of sec(x) is ... <br>
-        <button type="button" id="Button" onclick="alert('Wrong')">cscx</button> <br>
-        <button type="button" id="Button" onclick="alert('Wrong')">tanx^2</button><br>
-        <button type="button" id="Button" onclick="alert('Correct!')">secxtanx</button>
-        <li>
-          <a href="file:///Users/MichaelMoschitto/Desktop/MathQuiz/index3.html">Third Question </a></li>
-      </p>
+      <center>
+        <img src="secx.png" alt "secImage" id = "img1">
+        <p> The derivative of sec(x) is ... <br>
+          <button type="button" onclick="alert('Wrong')">cscx</button> <br>
+          <button type="button" onclick="alert('Wrong')">tanx^2</button><br>
+          <button type="button" id="Button" onclick="alert('Correct!')">secxtanx</button>
+          <li>
+            <a href="file:///Users/MichaelMoschitto/Desktop/MathQuiz/index3.html">Third Question </a></li>
+        </p>
+      </center>
     </body>
   </head>
 
