--- a/index3.html
+++ b/index3.html
@@ -4,18 +4,21 @@
 
   <head>
     <title>Michael's quiz</title>
-    <script src="http://ajax.goodgleapis.com/ajax/libs/jquery.min.is"></script>
+    <link rel="stylesheet" type=t ext/css href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="myscript.js"></script>
 
     <body>
-      <img src="cotx.png" alt "cotImage">
-      <p> The derivative of cot(x) is ... <br>
-        <button type="button" id="Button" onclick="alert('Wrong')">cscx</button> <br>
-        <button type="button" id="Button" onclick="alert('Wrong')">secx^2</button><br>
-        <button type="button" id="Button" onclick="alert('Correct!')">-cscx^2</button>
-        <li>
-          <a id="a1" href="file:///Users/MichaelMoschitto/Desktop/MathQuiz/index.html">First Question</a></li>
-      </p>
+      <center>
+        <img src="cotx.png" alt="cotImage" id = "img1">
+        <p> The derivative of cot(x) is ... <br>
+          <button type="button" onclick="alert('Wrong')">cscx</button> <br>
+          <button type="button" onclick="alert('Wrong')">secx^2</button><br>
+          <button type="button" id="Button" onclick="alert('Correct!')">-cscx^2</button>
+          <li>
+            <a id="a1" href="file:///Users/MichaelMoschitto/Desktop/MathQuiz/index.html">First Question</a></li>
+        </p>
+      </center>
     </body>
   </head>
 
